--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,20 +8,21 @@
     android:background="@color/design_default_color_background">
 
     <ImageView
-        android:id="@+id/ellipse1"
-        android:layout_width="280dp"
-        android:layout_height="280dp"
+        android:id="@+id/ellipseTop"
+        android:layout_width="240dp"
+        android:layout_height="240dp"
         android:src="@drawable/ellipse1"
+        android:scaleType="fitXY"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
-        android:id="@+id/ellipse2"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
+        android:id="@+id/ellipseBottom"
+        android:layout_width="153dp"
+        android:layout_height="154dp"
         android:src="@drawable/ellipse2"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/logo"
@@ -89,14 +90,13 @@
         <Button
             android:id="@+id/button_login"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/bg_button"
-            android:layout_marginTop="25dp"
-            android:text="LOGIN"
-            android:textAllCaps="true"
+            android:layout_height="48dp"
+            android:layout_marginTop="24dp"
+            android:backgroundTint="@color/orange"
+            android:text="Masuk"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:textStyle="normal"/>
+            style="@style/lexend_semibold"/>
 
     </LinearLayout>
 
@@ -108,6 +108,7 @@
         android:textSize="12sp"
         android:textStyle="normal"
         android:textColor="@color/light_blue"
+        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/content"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
